@@ -7,8 +7,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>11</java.version>
-        <selenide.version>6.19.0</selenide.version>
+        <java.version>11</java.version> <!-- Обновлено на Java 11 -->
+        <selenium.version>4.25.0</selenium.version>
         <testng.version>7.7.0</testng.version>
         <logback.version>1.2.11</logback.version>
         <webdrivermanager.version>5.9.2</webdrivermanager.version>
@@ -23,43 +23,54 @@
         <surefire.rerunFailingTestsCount>2</surefire.rerunFailingTestsCount>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <!-- Селениум и все связанные зависимости управляются здесь -->
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>${selenium.version}</version>
+            </dependency>
+            <!-- Другие зависимости, если потребуется -->
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
-        <!-- Selenide for browser interactions -->
+        <!-- Selenium WebDriver -->
         <dependency>
-            <groupId>com.codeborne</groupId>
-            <artifactId>selenide</artifactId>
-            <version>${selenide.version}</version>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
         </dependency>
 
-        <!-- WebDriverManager for driver management -->
+        <!-- WebDriverManager для автоматического управления драйверами -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
         </dependency>
 
-        <!-- TestNG for testing framework -->
+        <!-- TestNG для тестирования -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
         </dependency>
 
-        <!-- Logback for logging -->
+        <!-- Logback для логирования -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
 
-        <!-- SLF4J for logging -->
+        <!-- SLF4J для логирования -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.36</version>
         </dependency>
 
-        <!-- Cucumber for BDD testing -->
+        <!-- Cucumber для BDD тестирования -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
@@ -76,7 +87,7 @@
             <version>${cucumber.version}</version>
         </dependency>
 
-        <!-- Allure for reporting -->
+        <!-- Allure для отчётности -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-cucumber7-jvm</artifactId>
@@ -93,7 +104,7 @@
             <version>2.17.0</version>
         </dependency>
 
-        <!-- Dependencies for API interactions -->
+        <!-- Зависимости для работы с API -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
@@ -105,38 +116,11 @@
             <version>2.11.0</version>
         </dependency>
 
-        <!-- AspectJ for method interception and aspect-oriented programming -->
+        <!-- AspectJ для перехвата методов и аспектно-ориентированного программирования -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${aspectj.version}</version>
-        </dependency>
-
-        <!-- Additional dependencies for extended functionality -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.awaitility</groupId>
-            <artifactId>awaitility</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.16.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20190722</version>
         </dependency>
     </dependencies>
 
@@ -148,7 +132,7 @@
                 <version>3.0.0-M9</version>
                 <configuration>
                     <argLine>
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar" --add-opens java.base/java.lang=ALL-UNNAMED
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>${test.resource.dir}/${suiteXmlFile}.xml</suiteXmlFile>
@@ -157,16 +141,9 @@
                         <client.resource.dir>${client.resource.dir}</client.resource.dir>
                         <allurereportfolder>${allurereportfolder}</allurereportfolder>
                     </systemPropertyVariables>
-                    <properties>
-                        <property>
-                            <name>dataproviderthreadcount</name>
-                            <value>4</value>
-                        </property>
-                    </properties>
                     <includes>
                         <include>**/*TestRunner*.java</include>
                     </includes>
-                    <rerunFailingTestsCount>2</rerunFailingTestsCount>
                 </configuration>
             </plugin>
 
@@ -183,22 +160,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.1.0</version>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>allure-results</directory>
-                            <includes>
-                                <include>**</include>
-                            </includes>
-                        </fileset>
-                        <fileset>
-                            <directory>screenshots</directory>
-                            <includes>
-                                <include>**</include>
-                            </includes>
-                        </fileset>
-                    </filesets>
-                </configuration>
             </plugin>
 
             <plugin>
